WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298849
WebPageProxy::currentStateOfModifierKeys nullptr crash
https://bugs.webkit.org/show_bug.cgi?id=298849
Summary
WebPageProxy::currentStateOfModifierKeys nullptr crash
Thomas Devoogdt
Reported
2025-09-14 23:33:41 PDT
Thread 1 "browser" received signal SIGSEGV, Segmentation fault. 0x0000007fb38155fc in gdk_device_get_modifier_state () from target:/usr/lib64/libgtk-4.so.1 (gdb) bt 0 0x0000007fb38155fc in gdk_device_get_modifier_state () from target:/usr/lib64/libgtk-4.so.1 1 0x0000007fb04eb868 in ?? () from target:/usr/lib64/libwebkitgtk-6.0.so.4 (browser:4396): Gdk-CRITICAL **: 11:27:32.870: gdk_seat_get_keyboard: assertion 'GDK_IS_SEAT (seat)' failed See:
https://gitlab.gnome.org/GNOME/gtk/-/blob/4.20.1/gdk/gdkdevice.c#L1335
, which doesn't catch a nullptr device.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-09-15 00:43:52 PDT
Committed
299947@main
(f5fc32976a5f): <
https://commits.webkit.org/299947@main
> Reviewed commits have been landed. Closing PR #50732 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-09-15 00:44:14 PDT
<
rdar://problem/160595577
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug