[GTK] Fix crash in WebPageProxy::currentStateOfModifierKeys

https://bugs.webkit.org/show_bug.cgi?id=298849

Reviewed by Carlos Garcia Campos.

Thread 1 "browser" received signal SIGSEGV, Segmentation fault.
0x0000007fb38155fc in gdk_device_get_modifier_state () from target:/usr/lib64/libgtk-4.so.1
(gdb) bt
0  0x0000007fb38155fc in gdk_device_get_modifier_state () from target:/usr/lib64/libgtk-4.so.1
1  0x0000007fb04eb868 in ?? () from target:/usr/lib64/libwebkitgtk-6.0.so.4

(browser:4396): Gdk-CRITICAL **: 11:27:32.870: gdk_seat_get_keyboard: assertion 'GDK_IS_SEAT (seat)' failed

See: https://gitlab.gnome.org/GNOME/gtk/-/blob/4.20.1/gdk/gdkdevice.c#L1335,
which doesn't catch a nullptr device.

Signed-off-by: Thomas Devoogdt <thomas@devoogdt.com>
Canonical link: https://commits.webkit.org/299947@main